新增底部的导航条，还需要完成顶部的选项卡

--- a/微信小程序.md
+++ b/微信小程序.md
@@ -287,10 +287,53 @@ git reset --soft HEAD^
 
 ## day 02
 
+### 内容回顾
+
+- 搭建环境
+- 全局配置
+  - pages
+  - window
+  - tarbar
+- 页面
+  - json
+  - js
+  - wxml
+  - wxss
+- flex 布局
+  - display
+  - flex-direction
+  - justify-content
+  - align-item
+- 小程序开发
+  - 组件（标签）
+    - text
+    - view
+    - image
+  - 样式
+    - rpx
+
+### 今日概要
+
+- 指令
+- api
+- 页面
 
 
-### 1、
 
-码市
+### 今日内容
+
+#### 1、跳转
+
+
+
+data {} 中存储是 key: vlue 键值对的数据
+
+其他方法中存储的是变量，需要使用 = 进行赋值 
+
+
+
+[微信小程序之顶部导航栏（选项卡）实例 —— 微信小程序实战系列（1）](https://blog.csdn.net/michael_ouyang/article/details/56488665)
+
+
 
 https://developers.weixin.qq.com/miniprogram/dev/framework/
