1、新增了许多图标 2、完成了首页顶部导航条 采用flex布局 3、完成了消息页面 4、完成了我的页面

--- a/微信小程序.md
+++ b/微信小程序.md
@@ -141,9 +141,9 @@ MPI  QWEB
 
 
 
-**容器属性**
+### 6、**容器属性 ** Flex 布局教程：语法篇
 
-​	
+​	[Flex 布局教程：语法篇](https://www.ruanyifeng.com/blog/2015/07/flex-grammar.html)
 
 - flex-direction
 
