修改了部分样式

--- a/微信小程序.md
+++ b/微信小程序.md
@@ -125,6 +125,17 @@
 
 ![image-20210907134554460](微信小程序.assets/image-20210907134554460.png)
 
+### 7、颜色
+
+```
+我的：
+	顶部：#00B6B8
+	线条：#F7F7F7
+
+```
+
+
+
 
 
 
@@ -143,7 +154,7 @@ MPI  QWEB
 
 ### 6、**容器属性 ** Flex 布局教程：语法篇
 
-​	[Flex 布局教程：语法篇](https://www.ruanyifeng.com/blog/2015/07/flex-grammar.html)
+​	[Flex 布局教程：语法篇]()
 
 - flex-direction
 
@@ -337,3 +348,60 @@ data {} 中存储是 key: vlue 键值对的数据
 
 
 https://developers.weixin.qq.com/miniprogram/dev/framework/
+
+
+
+#### 12个月份的古称
+
+```
+玄天色	
+一月.孟春 
+	昨夜斗回北，今朝岁启东
+	
+栀子色
+二月.花朝
+	雨晴烟晚，绿水新池满
+
+苏梅色
+三月.桃色
+	春日游.杏花吹满头
+
+水龙呤
+	四月.槐夏
+	春已归来，看美人头上，袅袅春幡
+	
+石榴裙
+	五月.仲夏
+	小扇引微凉，悠悠夏日长
+	
+夕岚色
+	六月.荷月
+	微雨过，小荷翻，榴花开欲然
+	
+白露降
+	七月.上秋
+	银烛秋光冷画屏，轻罗小扇扑流萤
+	
+桂花香
+	八月.清秋
+	夜雨做成秋，恰上心头
+
+棠梨花	
+	九月.桑落
+	菊花煮酒，落叶研磨，却道天凉好个秋
+
+胭脂水
+	十月.霜华
+    无言独上西楼月如钩，寂寞梧桐深院锁清秋
+    
+明茶褐
+	十一月.隆冬
+	柴门为犬吠，风雪夜归人
+	
+青玉白
+	十二月.暮岁
+	一岁一礼，一寸欢喜
+	
+
+```
+
