for指令、上传图片、数据绑定、小程序跳转的学习，还需要进行实际的操作

--- a/微信小程序.md
+++ b/微信小程序.md
@@ -51,7 +51,7 @@
 
 每一个页面都在 **page** 目录下有一个文件夹，每一个页面都有四个文件。  
 
-
+lya
 
 ### 3、开发小程序 
 
@@ -343,13 +343,59 @@ data {} 中存储是 key: vlue 键值对的数据
 
 
 
+​	微信小程序中 bindtap 绑定事件，传参数： “data-” 为前缀。
+
+至于跳转有两种方式：
+
+​		[微信小程序实现跳转的几种方式总结（推荐）](https://www.jb51.net/article/160172.htm)
+
+1、使用 微信的API：给页面布局加监听bindtap事件，然后在方法里面，通过wx.navigatorTo来实现跳转
+
+2、使用导航组件，标签，页面链接来实现： <navigator url="../my/my">t跳转</nabigator>
+
 [微信小程序之顶部导航栏（选项卡）实例 —— 微信小程序实战系列（1）](https://blog.csdn.net/michael_ouyang/article/details/56488665)
 
 
 
 https://developers.weixin.qq.com/miniprogram/dev/framework/
 
+#### 2、数据绑定
 
+​		前端框架都是使用数据绑定，比jq、js的绑定数据要快。
+
+语法： 使用双括号
+
+​		{{变量名、表达式}}
+
+
+
+##### 2.1 微信小程序数据绑数据
+
+​		微信小程序的数据绑定 数据必须在 页面.js 的 data{} 中
+
+​		获取数据：this.data.变量名
+
+​		修改数据：必须是特殊的方式进行修改，这样前端和后端都才会改变
+
+​		this.setData({
+
+​			“key”: value
+
+})
+
+#### 3、编译-修改默认打开页面
+
+​		在微信小程序开发工具中每次编译默认是打开首页的，可以通过设置改变默认打开的页面
+
+![image-20210912165905836](微信小程序.assets/image-20210912165905836.png)	![image-20210912165957372](微信小程序.assets/image-20210912165957372.png)
+
+
+
+#### 4、js文件中 this 的指向问题
+
+​		[微信小程序中this.data与this.setData的区别详解](https://www.jb51.net/article/147523.htm)
+
+# 	[微信小程序中的this指向问题](https://www.cnblogs.com/jikeyun/p/12372355.html)
 
 #### 12个月份的古称
 
@@ -404,4 +450,24 @@ https://developers.weixin.qq.com/miniprogram/dev/framework/
 	
 
 ```
+
+#### 5、for 指令
+
+```css
+<wx:for="{{list}}">
+	默认生成 index 和 item
+《wx:for="{{list}}" wx:for-index="idx" wx:for-item="myItem"》		
+```
+
+#### 6、上传图片
+
+​	使用微信小程序自带的api，目前只是上传到内存中
+
+https://developers.weixin.qq.com/miniprogram/dev/api/media/image/wx.saveImageToPhotosAlbum.html
+
+注意：
+
+​	微信小程序的集合没有append 和 push 方法，向集合增加新的元素，需要使用拼接生成新的集合 ：
+
+​		集合3 ： 集合1.concat(集合2)
 
