1、新增了测试上传图片的page 2、微信小程序.md 文件中将今日学习的内容进行记录

--- a/微信小程序.md
+++ b/微信小程序.md
@@ -383,6 +383,10 @@ https://developers.weixin.qq.com/miniprogram/dev/framework/
 
 })
 
+##### 2.2 传输参数
+
+​		在bindtab 的时候使用 在标签中 添加 data-变量名="值" 进行传递参数，在onload 函数中获取
+
 #### 3、编译-修改默认打开页面
 
 ​		在微信小程序开发工具中每次编译默认是打开首页的，可以通过设置改变默认打开的页面
@@ -471,3 +475,83 @@ https://developers.weixin.qq.com/miniprogram/dev/api/media/image/wx.saveImageToP
 
 ​		集合3 ： 集合1.concat(集合2)
 
+#### 7、总结
+
+- 标签（组件）
+
+  - text
+  - view
+  - image
+  - navigator, 跳转到其他页面（默认只能跳转到非tabbar页面）
+  - button, 按钮（特殊：建议获取用户信息的时候使用）
+
+- 事件
+
+  - bindtab 
+
+- api
+
+  - wx.
+
+    ```java
+    wx.navigateTo({
+        url:""
+    })
+    ```
+
+  - openSetting
+
+    ```
+    wx.openSetting({})
+    ```
+
+  - wx.chooseImage
+
+- 数据绑定
+
+- for指令
+
+  - 注意：setData +that  或者 箭头函数
+
+#### 8、作业
+
+1、拍卖详细页面
+
+2、发布消息页面
+
+```css
+<textarea> </textarea>
+```
+
+
+
+3、功能点：
+
+- 拍卖页面通过for 循环 + 后端数据展示信息
+- 点击拍卖列表中的某项拍品的时候需要将自己的id传递给拍卖详细页面，在拍卖详细页接收
+- 上传图片
+- 选择位置	
+
+![image-20210912232854319](微信小程序.assets/image-20210912232854319.png)![image-20210912232910367](微信小程序.assets/image-20210912232910367.png)![image-20210912232920006](微信小程序.assets/image-20210912232920006.png)
+
+
+
+## day 03
+
+### 内容回顾
+
+- 组件
+- api
+- 事件
+- 
+
+### 今日概要
+
+- 小程序
+
+- 后端的api
+  - 与小程序进行交互，更加贴近实际的情况
+
+### 今日详细
+
+#### 1、数据绑定
