““简单测试input框的使用和双向绑定

--- a/微信小程序.md
+++ b/微信小程序.md
@@ -555,3 +555,16 @@ https://developers.weixin.qq.com/miniprogram/dev/api/media/image/wx.saveImageToP
 ### 今日详细
 
 #### 1、数据绑定
+
+- 基本绑定
+- for绑定
+
+双向绑定
+
+#### 2、用户登录（手机号）
+
+用手机号进行登录。
+
+​		微信小程序默认不是双向绑定，前端绑定后端的值可以随后端的改变而实时改变，但是前端的值发生改变后，后端对应的值不会发生改变， 可以通过绑定一个事件在后端代码中进行重新赋值，使前端的值发生改变的时候，后端也会实时更新，最后使前端绑定的值发送改变。
+
+​		在Vue中默认是双向绑定。
