暂时完成了发布页面的布局

--- a/微信小程序.md
+++ b/微信小程序.md
@@ -154,7 +154,7 @@ MPI  QWEB
 
 ### 6、**容器属性 ** Flex 布局教程：语法篇
 
-​	[Flex 布局教程：语法篇]()
+​	[Flex 布局教程：语法篇]([Flex 布局教程：语法篇 - 阮一峰的网络日志 (ruanyifeng.com)](http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html))
 
 - flex-direction
 
